[tool.poetry]
name = "musicdiscordbot"
version = "0.1.0"
description = ""
authors = ["auhbz <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
youtube-dl = "^2021.4.7"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
